Edited theme.css and Homepage

--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -151,6 +151,7 @@ color: %color:On Primary Container%;
 }
 
 .anvil-role-headline {
+  font: Lato;
   font-size: 32px;
   line-height: 40px;
   font-weight: 400;
