Created React2.png; Edited theme.css and Homepage

--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -203,7 +203,10 @@ color: %color:On Primary Container%;
   right: 0;
   left: 0;
   background-image: url('_/theme/map-header-background-1920x250%202x.png');
-  background-position: center top;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  height: 85px;
 /*   flex: 0 0;
   flex-basis: auto;
   flex-basis: content; */
