--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -626,13 +626,12 @@ button.close > span, button.close {
   color:%color:On Background%;
   text-shadow: 0 1px 0 %color:Background%;
 }
-.anvil-role-green-arrow > .arrow-up {
-  color: rgba(0, 153, 0);
+.anvil-role-green-arrow {
+  color: rgb(11,180,87);
 }
-    
 
-.anvil-role-red-arrow >.arrow-down {
-  color: rgba(255, 0, 0);
+.anvil-role-red-arrow {
+  color: rgb(161,52,60);
 }
 
 
